re-added 10% comparisons to 2/3 epidemic sections

--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -341,13 +341,15 @@ The results of analyses examining the impact of far UVC installation on an epide
 
 #### Epidemic Peak Size
 
-Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 50% and the efficacy from 40% to 80% reduced the mean final epidemic size from 5502 (4780-6047) to 1967 (1456-2468), while targeting coverage at the riskiest locations decreased the mean peak size from 5179 (4760-5712) to 293 (148-536) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size from 19669 (18862-21018) to 9106 (8334-10222) for random coverage and 19511 (18741 - 20610) for targeted coverage. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%.
+Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. 
+
+Assuming 10% coverage and 60% efficacy, random far UVC installation led to a 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) and 6.8% (range 4.5%-7.5%) respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy resulted in a 7.7% (range 6.3-8.6%) and 11.1% (range 8.6-10.3%) reduction in epidemic peak size respectively, relative to the no-intervention baseline.
+
+For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%) (5502 (4780-6047) to 646 (238-1103)), while targeting coverage at the riskiest locations decreased the mean peak size by 99.1% (98.8-99.1%) (5179 (4760-5712) to 48 (44-71)) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) (19669 (18862-21018) to 9106 (8334-10222)) for random coverage and by 67.8% (66.5-69.6%) (19511 (18741 - 20610) to 6278 (5690-6891)) for targeted coverage. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%.
 
 (ref:epidemic-peak-size) The impact of far UVC coverage type, coverage, and efficacy on the mean final epidemic size per 1000 individuals, defined as the maximum total number of recovered individuals in the population averaged across 25 stochastic model simulations, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random, and the dark blue lines simulations where far UVC was targeted at the riskiest settings. The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
 ```{r epidemic-peak-size, fig.cap="(ref:epidemic-peak-size)", fig.fullwidth = TRUE, fig.height=5}
-
-# Assuming 10% coverage and 60% efficacy, far UVC installation led to a A% (range B%-C%) reduction in the epidemic peak size the "Influenza-Like" archetype, and X% (range Y%-Z%) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are A% (range B%-C%) and X% (range Y%-Z%) respectively.
 
 epidemic_summary_outputs |>
   filter(coverage < 0.8, efficacy > 0) |>
@@ -378,13 +380,13 @@ epidemic_summary_outputs |>
 
 #### Epidemic Peak Timing
 
-Figure \@ref(fig:epidemic-peak-timing) shows the impact of far UVC deployment on the timing of the epidemic peak. The deployment of far UVC increased the time taken for the epidemic peak timing for both the "influnza-like" and the "SARS-CoV-2-like" pathogens. Increasing far UVC coverage and/or efficacy increased the epidemic peak time. Increasing targeted far UVC efficacy from 40% to 80% and the coverage from 10% to 50% for the "influenza-like" pathogen increased the peak time from 138 days (131-154) to 395 days (233-834), while increasing far UVC efficacy from 40% to 80% and the coverage from 10% to 70% increased the peak time from 109 days (106-116) to 195 days (180-218) for the SARS-CoV-2-like pathogen. Targeting far UVC coverage at the riskiest settings provided greater delays in epidemic peak timing relative to the random allocation of far UVC across all combinations of efficacy and coverage, with the difference in epidemic peak time between targeted and random coverage types increasing with both far UVC coverage and efficacy. The peak time observed for the "influenza-like" pathogen decreased rapidly at 80% efficacy when coverage \> 50%, as far UVC prevented the epidemic from occurring (Figure \@ref(fig:epidemic-peak-size)).
+Figure \@ref(fig:epidemic-peak-timing) shows the impact of far UVC deployment on the timing of the epidemic peak. The deployment of far UVC increased the time taken for the epidemic peak timing for both the "influnza-like" and the "SARS-CoV-2-like" pathogens. Increasing far UVC coverage and/or efficacy increased the epidemic peak time. For 10% coverage and 60% efficacy, far UVC installation with 60% efficacy led to the epidemic peak occurring 5 days (range 1-10 days) later for the "Influenza-Like" archetype when compared to the no far UVC scenario, while targeting far UVC caused the peak to occur 16 days (range 9-25 days) later. Increasing the efficacy to 80% resulted in relative delays of 7 days (range 3-16 days) and 20 days (range 17-25 days) for the random and targeted coverage types respectively. For the "SARS-CoV-2-Like" archetype 10% far UVC coverage with 60% efficacy delayed the epidemic peak by 2 (range 1-4 days) and 6 days (range 5-8 days) for the random and targeted strategies respectively, while increasing the efficacy to 80% for random and targeted far UVC achieved reductions of 5 days (range 3-6 days) and 8 days (range 6-9 days).
+
+Increasing targeted far UVC efficacy from 40% to 80% and the coverage from 10% to 50% for the "influenza-like" pathogen increased the peak time by 286% (range 177.9-541.6%) (138 days (131-154) to 395 days (233-834)), while increasing far UVC efficacy from 40% to 80% and the coverage from 10% to 70% increased the peak time by 181% (range 169.8-187.9%) (109 days (106-116) to 195 days (180-218)) for the SARS-CoV-2-like pathogen. Targeting far UVC coverage at the riskiest settings provided greater delays in epidemic peak timing relative to the random allocation of far UVC across all combinations of efficacy and coverage, with the difference in epidemic peak time between targeted and random coverage types increasing with both far UVC coverage and efficacy. The peak time observed for the "influenza-like" pathogen decreased rapidly at 80% efficacy when coverage \> 50%, as far UVC prevented the epidemic from occurring (Figure \@ref(fig:epidemic-peak-size)).
 
 (ref:epidemic-peak-timing) The impact of far UVC coverage type, coverage, and efficacy on the mean number of days until the peak of the epidemic wave (in days), defined as the average timestep on which the number of infected individuals in the population peaked across 25 stochastic simulations for each parameterisation, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random across setting-types (excluding households), and the dark blue lines simulations where far UVC was targeted at the riskiest locations across all setting types (excluding households). The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
 ```{r epidemic-peak-timing, fig.cap="(ref:epidemic-peak-timing)", fig.fullwidth = TRUE, fig.height=5}
-
-# For 10% coverage and 60% efficacy, far UVC installation led to the epidmic peak occurring A days (range B-C days) later for the "Influenza-Like" archetype and X days (range Y days-Z days) for the "SARS-CoV-2-Like" archetype, compared to a situation in which far UVC has not been installed. At 10% coverage and 80% assumed efficacy, these are A days (range B - C days) and X days (range Y days - Z days) respectively.
 
 epidemic_summary_outputs |>
   filter(coverage < 0.8, efficacy > 0) |>
@@ -415,8 +417,7 @@ epidemic_summary_outputs |>
 ```
 
 #### Epidemic Final Size
-
-Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size. Increasing both far UVC coverage and efficacy resulted in substantial reductions in final epidemic size, and targeting far UVC deployment in the riskiest locations provided notable reductions in final epidemic size across all simulated parameter combinations. The reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen, and targeted far UVC coverage only provided reductions in epidemic final size for the "SARS-CoV-2" like pathogen only when efficacy $\geq$ 60% and coverage $\geq$ 30%.
+Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics. Increasing far UVC efficacy from 40% to 80% and expanding coverage from 10% to 80% decreased the mean final size by 70.5% (62.3-81.2%) (58632 (56014-60713) to 17316 (10540-22911)) when far UVC was deployed randomly against an "influenza-like" pathogen, and by 98.9% (97.2-99.6%) (58070 (56337-59994) to 592 (240-1670)) when targeted against the riskiest locations. Similarly, for the "SARS-CoV-2-like pathogen, the mean final size was reduced by 22.7% (20.9-24.7%) (88870 (88251-89723) to 68731 (66483-70938)) when efficacy was increased from 40% to 80% and coverage from 10% to 70% under random coverage and by 29.3% (27.5-30.2%) (88991 (88343-89858) to 62936 (61633-65156)) under targeted far UVC. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size. Increasing both far UVC coverage and efficacy resulted in substantial reductions in final epidemic size, and targeting far UVC deployment in the riskiest locations provided notable reductions in final epidemic size across all simulated parameter combinations. The reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen, and targeted far UVC coverage only provided reductions in epidemic final size for the "SARS-CoV-2" like pathogen only when efficacy $\>geq$ 60% and $\>geq$ 30%.
 
 (ref:epidemic-final-size) The impact of far UVC coverage type, coverage, and efficacy on the mean final epidemic size per 1000 individuals, defined as the average maximum total number of recovered individuals in the population across 25 stochastic simulation runs for each parameterisation, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random, and the dark blue lines simulations where far UVC was targeted at the riskiest settings. The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
