added numbers to final size

--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -419,7 +419,7 @@ epidemic_summary_outputs |>
 #### Epidemic Final Size
 Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics.
 
-Relative to a non-intervention baseline, installing far UVC at a coverage of 10% and assuming 60% efficacy, far UVC reduced the total population becoming infected by 5.5% (range 5.3%-6.7%) for the "Influenza-Like" archetype under random coverage and by 8.1% (range 6.0%-10.1%) under targeted coverage. Increasing the efficacy to 80% resulted in additional reductions of 7.1% (range 6.1%-9.8%) and 12.6% (range 10.8%-12.7%) to of baseline for random and targeted coverage respectively. For the "SARS-CoV-2-like" pathogen, installing far UVC at 10% coverage with 60% efficacy reduced the epidemic final size, relative to the no-far UVC baseline, by 1.2% (0.8-1.1%) for random coverage and 1.5% (1.1-1.8%) for targeted coverage. The reduction in final epidemic size increased to 2.1% (1.6-2.2%) for random coverage and 2.7% (2.3-2.4%) for targeted coverage when the efficacy was increased to 80%.
+Relative to a non-intervention baseline, installing far UVC at a coverage of 10% and assuming 60% efficacy, far UVC reduced the total population becoming infected by 5.5% (range 5.3%-6.7%) (61262 (58127-65451) to 57910 (55031-61045)) for the "Influenza-Like" archetype under random coverage and by 8.1% (range 6.0%-10.1%) (61262 (58127-65451) to 56286 (54616-58804)) under targeted coverage. Increasing the efficacy to 80% resulted in additional reductions of 7.1% (range 6.1%-9.8%) (range 5.3%-6.7%) (61262 (58127-65451) to 56918 (54594-59043)) and 12.6% (range 10.8%-12.7%) (61262 (58127-65451) to 53516 (50797-58350)) to of baseline for random and targeted coverage respectively. For the "SARS-CoV-2-like" pathogen, installing far UVC at 10% coverage with 60% efficacy reduced the epidemic final size, relative to the no-far UVC baseline, by 1.2% (0.8-1.1%) (89652 (range 88724-90327) to 88582 (87978-89292)) for random coverage and 1.5% (1.1-1.8%) (89652 (range 88724-90327) to ) for targeted coverage. The reduction in final epidemic size increased to 2.1% (1.6-2.2%) (89652 (range 88724-90327) to 87780 (87320-88298)) for random coverage and 2.7% (2.3-2.4%) (89652 (range 88724-90327) to 87268 (86552-88205)) for targeted coverage when the efficacy was increased to 80%.
 
 Increasing far UVC efficacy from 40% to 80% and expanding coverage from 10% to 80% decreased the mean final size by 70.5% (62.3-81.2%) (58632 (56014-60713) to 17316 (10540-22911)) when far UVC was deployed randomly against an "influenza-like" pathogen, and by 98.9% (97.2-99.6%) (58070 (56337-59994) to 592 (240-1670)) when targeted against the riskiest locations. Similarly, for the "SARS-CoV-2-like pathogen, the mean final size was reduced by 22.7% (20.9-24.7%) (88870 (88251-89723) to 68731 (66483-70938)) when efficacy was increased from 40% to 80% and coverage from 10% to 70% under random coverage and by 29.3% (27.5-30.2%) (88991 (88343-89858) to 62936 (61633-65156)) under targeted far UVC. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size. Increasing both far UVC coverage and efficacy resulted in substantial reductions in final epidemic size, and targeting far UVC deployment in the riskiest locations provided notable reductions in final epidemic size across all simulated parameter combinations. The reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen, and targeted far UVC coverage only provided reductions in epidemic final size for the "SARS-CoV-2" like pathogen only when efficacy $\>geq$ 60% and $\>geq$ 30%.
 
