fixed final size section

--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -340,10 +340,7 @@ ggplot(subset(temp_df3, timestep < 350)) +
 The results of analyses examining the impact of far UVC installation on an epidemic pathogen are presented in figures \@ref(fig:epidemic-peak-size), Figure \@ref(fig:epidemic-peak-timing), and Figure \@ref(fig:epidemic-final-size). We consider three metrics to evaluate the impact of far UVC in the case of an epidemic pathogen. The first is the number of infected individuals at the peak of transmission (hereafter referred to as "peak size", see Figure \@ref(fig:epidemic-peak-size)); the second is the timing of this peak (hereafter referred to as "peak timing"), see Figure \@ref(fig:epidemic-peak-timing); and the third is the total number of individuals infected over the course of the epidemic (hereafter referred to as "final epidemic size", see Figure \@ref(fig:epidemic-final-size).
 
 #### Epidemic Peak Size
-
-Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. 
-
-Assuming 10% coverage and 60% efficacy, random far UVC installation led to a 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) and 6.8% (range 4.5%-7.5%) respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy resulted in a 7.7% (range 6.3-8.6%) and 11.1% (range 8.6-10.3%) reduction in epidemic peak size respectively, relative to the no-intervention baseline.
+Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. Assuming 10% coverage and 60% efficacy, random far UVC installation led to a 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) and 6.8% (range 4.5%-7.5%) respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy resulted in a 7.7% (range 6.3-8.6%) and 11.1% (range 8.6-10.3%) reduction in epidemic peak size respectively, relative to the no-intervention baseline.
 
 For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%) (5502 (4780-6047) to 646 (238-1103)), while targeting coverage at the riskiest locations decreased the mean peak size by 99.1% (98.8-99.1%) (5179 (4760-5712) to 48 (44-71)) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) (19669 (18862-21018) to 9106 (8334-10222)) for random coverage and by 67.8% (66.5-69.6%) (19511 (18741 - 20610) to 6278 (5690-6891)) for targeted coverage. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%.
 
@@ -417,11 +414,9 @@ epidemic_summary_outputs |>
 ```
 
 #### Epidemic Final Size
-Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics.
+Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics. Relative to a non-intervention baseline, installing far UVC at a coverage of 10% and assuming 60% efficacy, far UVC reduced the epidemic final size, as a percentage of the total population by 5.5% (range 5.3%-6.7%) (from 61.2% (58.1-65.4%) to 57.9% (55.0-61.0%)) for the "Influenza-Like" archetype under random coverage and by 8.1% (range 6.0%-10.1%) (from 61.2% (58.1-65.4%) to 56.2% (54.6-58.8%)) under targeted coverage. Increasing the efficacy to 80% resulted in additional reductions of 7.1% (range 6.1%-9.8%) (from 61.2% (58.1-65.4%) to 56.9% (54.5-59.0%)) and 12.6% (range 10.8%-12.7%) (from 61.2% (58.1-65.4%) to 53.5% (50.7-58.3%)) to of baseline for random and targeted coverage respectively. For the "SARS-CoV-2-like" pathogen, installing far UVC at 10% coverage with 60% efficacy reduced the epidemic final size, relative to the no-far UVC baseline, by 1.2% (0.8-1.1%) (from 89.6% (88.7-90.3%) of the population to 88.5% (87.9-89.2%)) for random coverage and 1.5% (1.1-1.8%) (from 89.6% (88.7-90.3%) to 88.3% (87.7%-88.7%)) for targeted coverage. The reduction in final epidemic size increased to 2.1% (1.6-2.2%) (from 89.6% (88.7-90.3%) to 87780 (87.3-88.2%)) for random coverage and 2.7% (2.3-2.4%) (from 89.6% (88.7-90.3%) to 87.2% (86.5-88.2%)) for targeted coverage when the efficacy was increased to 80%.
 
-Relative to a non-intervention baseline, installing far UVC at a coverage of 10% and assuming 60% efficacy, far UVC reduced the total population becoming infected by 5.5% (range 5.3%-6.7%) (61262 (58127-65451) to 57910 (55031-61045)) for the "Influenza-Like" archetype under random coverage and by 8.1% (range 6.0%-10.1%) (61262 (58127-65451) to 56286 (54616-58804)) under targeted coverage. Increasing the efficacy to 80% resulted in additional reductions of 7.1% (range 6.1%-9.8%) (range 5.3%-6.7%) (61262 (58127-65451) to 56918 (54594-59043)) and 12.6% (range 10.8%-12.7%) (61262 (58127-65451) to 53516 (50797-58350)) to of baseline for random and targeted coverage respectively. For the "SARS-CoV-2-like" pathogen, installing far UVC at 10% coverage with 60% efficacy reduced the epidemic final size, relative to the no-far UVC baseline, by 1.2% (0.8-1.1%) (89652 (88724-90327) to 88582 (87978-89292)) for random coverage and 1.5% (1.1-1.8%) (89652 (88724-90327) to ) for targeted coverage. The reduction in final epidemic size increased to 2.1% (1.6-2.2%) (89652 (88724-90327) to 87780 (87320-88298)) for random coverage and 2.7% (2.3-2.4%) (89652 (88724-90327) to 87268 (86552-88205)) for targeted coverage when the efficacy was increased to 80%.
-
-Increasing far UVC efficacy from 40% to 80% and expanding coverage from 10% to 80% decreased the mean final size by 70.5% (62.3-81.2%) (58632 (56014-60713) to 17316 (10540-22911)) when far UVC was deployed randomly against an "influenza-like" pathogen, and by 98.9% (97.2-99.6%) (58070 (56337-59994) to 592 (240-1670)) when targeted against the riskiest locations. Similarly, for the "SARS-CoV-2-like pathogen, the mean final size was reduced by 22.7% (20.9-24.7%) (88870 (88251-89723) to 68731 (66483-70938)) when efficacy was increased from 40% to 80% and coverage from 10% to 70% under random coverage and by 29.3% (27.5-30.2%) (88991 (88343-89858) to 62936 (61633-65156)) under targeted far UVC. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size. Increasing both far UVC coverage and efficacy resulted in substantial reductions in final epidemic size, and targeting far UVC deployment in the riskiest locations provided notable reductions in final epidemic size across all simulated parameter combinations. The reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen, and targeted far UVC coverage only provided reductions in epidemic final size for the "SARS-CoV-2" like pathogen only when efficacy $\>geq$ 60% and $\>geq$ 30%.
+Increasing far UVC efficacy from 40% to 80% and expanding coverage from 10% to 80% decreased the mean final size by 70.5% (62.3-81.2%) (from 58.6% (56.0-60.7%) to 17.3% (10.5-22.9%)) when far UVC was deployed randomly against an "influenza-like" pathogen, and by 98.9% (97.2-99.6%) (from 58.1% (56.3-59.9%) to 0.59% (0.240-1.67%)) when targeted against the riskiest locations. Similarly, for the "SARS-CoV-2-like pathogen, the mean final size was reduced by 22.7% (20.9-24.7%) (88.9% (88.3-89.7%) to 68.7% (66.5-70.9%)) when efficacy was increased from 40% to 80% and coverage from 10% to 70% under random coverage and by 29.3% (27.5-30.2%) (88.9% (88.3-89.8%) to 62.9% (61.6%-65.1%)) under targeted far UVC. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size. Increasing both far UVC coverage and efficacy resulted in substantial reductions in final epidemic size, and targeting far UVC deployment in the riskiest locations provided notable reductions in final epidemic size across all simulated parameter combinations. The reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen, and targeted far UVC coverage only provided reductions in epidemic final size for the "SARS-CoV-2" like pathogen only when efficacy $\>geq$ 60% and $\>geq$ 30%.
 
 (ref:epidemic-final-size) The impact of far UVC coverage type, coverage, and efficacy on the mean final epidemic size per 1000 individuals, defined as the average maximum total number of recovered individuals in the population across 25 stochastic simulation runs for each parameterisation, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random, and the dark blue lines simulations where far UVC was targeted at the riskiest settings. The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
